--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
                 <input
                 type="text"
                 name="name"
+                id="name"
                 class="form-control"
                 placeholder="Enter your name"
                 required
